# gtksourceview-sys-rs

./: Cargo.toml  build.rs
src/: lib.rs
